# seela

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  config.rs  fzf.rs  lib.rs  logging.rs  main.rs  run.rs  tmux.rs
tests/: config_tests.rs
