[package]
name = "seela"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Bardiya Feili"]
description = "A simple tmux session manager."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
walkdir = "2.4"
shellexpand = "3.1"
# No skim or tmux_interface needed, using std::process::Command

